--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
+
+body{
+  height: 100vh;
+  background-color: grey;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
-.App-link {
-  color: #61dafb;
+.div1AllApp{
+  display: flex;
+  background-color: white;
+  padding: 15px;
+  border-radius: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.divBtnNextStepApp{
+
+}
+
+
+.couleur{
+color: hsl(213, 96%, 18%);
+color: hsl(243, 100%, 62%);
+color: hsl(228, 100%, 84%);
+color: hsl(206, 94%, 87%);
+color: hsl(354, 84%, 57%);
+color: hsl(231, 11%, 63%);
+color: hsl(229, 24%, 87%);
+color: hsl(217, 100%, 97%);
+color: hsl(231, 100%, 99%);
+color: hsl(0, 0%, 100%);
 }
