--- a/src/components/BtnNextStep/BtnNextStep.css
+++ b/src/components/BtnNextStep/BtnNextStep.css
@@ -1,21 +1,15 @@
 
 
-.divBtnBtnNextStep{
-    text-align: end;
-    padding-right: 80px; 
-    padding-left: 80px;
-    padding-top: 25px;
-}
-
-.BtnBtnNextStep{
+/* + mon btn Confirm (le dernier) */
+.BtnBtnNextStep{ 
     background-color: hsl(213, 96%, 18%);
     color: hsl(0, 0%, 100%);
     border: none;
     border-radius: 10px;
     border-radius: 10px;
     padding: 15px;
-    padding-right: 30px;
-    padding-left: 30px;
+    padding-right: 20px;
+    padding-left: 20px;
     cursor: pointer;
     font-weight: bold;
 }
