--- a/src/components/MiniCard/MiniCard.css
+++ b/src/components/MiniCard/MiniCard.css
@@ -38,3 +38,10 @@
     letter-spacing: 0.5px;
 }
 
+/* effet */
+.effetDivMiniCard{
+    border: 1px solid hsl(280, 65%, 48%);
+    background-color:  hsl(225, 13%, 94%);
+}
+
+
