--- a/src/components/Step3/Step3.css
+++ b/src/components/Step3/Step3.css
@@ -23,3 +23,10 @@
     padding-bottom: 45px;
     color:hsl(231, 11%, 63%);
 }
+
+.div2Step3{
+    /* display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 30px; */
+}
