--- a/src/components/Step4/Step4.css
+++ b/src/components/Step4/Step4.css
@@ -1,4 +1,28 @@
 
+
+.divAllStep4{
+    padding-right: 80px; 
+    padding-left: 80px;
+    padding-top: 50px;
+
+    width: 420px;
+}
+
+.h1AllStep4{
+    margin: 0;
+    color: hsl(213, 96%, 18%);
+    padding-bottom: 10px;
+}
+
+.pAllStep4{
+    margin: 0;
+    padding-bottom: 45px;
+    color:hsl(231, 11%, 63%);
+}
+
+
+
+
 .div2Step4{
     display: flex;
     align-items: center;
