--- a/src/components/ThankYou/ThankYou.css
+++ b/src/components/ThankYou/ThankYou.css
@@ -1,5 +1,20 @@
 
 
+.divAllStep4{
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center
+}
+
+.imgThankYou{
+    height: 70px;
+}
+
 .h1ThankYou{
     color: hsl(213, 96%, 18%);
+}
+
+.pThankYou{
+    color:hsl(231, 11%, 63%);
 }
