--- a/src/components/Step4/Step4.css
+++ b/src/components/Step4/Step4.css
@@ -20,10 +20,24 @@
     color:hsl(231, 11%, 63%);
 }
 
-.div2Step4{
+/* .div2Step4{
     display: flex;
     align-items: center;
     justify-content: space-between;
+} */
+
+
+.divStep4{
+    padding-right: 80px; 
+    padding-left: 80px;
+    padding-top: 230px;
+    padding-bottom: 97px;
+
+    width: 420px;
 }
 
-
+.h1Step4{
+    color: hsl(0, 96%, 18%);
+    margin: 0;
+    text-align: center;
+}
