--- a/src/components/BtnNextStep/BtnNextStep.css
+++ b/src/components/BtnNextStep/BtnNextStep.css
@@ -1,7 +1,7 @@
 
 
 /* + mon btn Confirm (le dernier) */
-.BtnBtnNextStep{ 
+.btnBtnNextStep{ 
     background-color: hsl(213, 96%, 18%);
 
     color: hsl(0, 0%, 100%);
@@ -13,4 +13,12 @@
     padding-left: 20px;
     cursor: pointer;
     font-weight: bold;
+}
+
+.btnBtnNextStep:hover{
+    background-color: hsl(213, 96%, 27%);
+}
+
+.btnConfirmBtnNextStep:hover{
+    background-color:hsl(255, 80%, 52%)
 }
